# ares

./: .dockerignore  .gitignore  Cargo.toml  Makefile  README.md  chain-data-ares-aura.json  debug-composer.yml  docker-compose-for-manual-bridge-test.yml  docker-compose.yml  docker-local-gladios-testnet.yml  rustfmt.toml
ares-rpc/: Cargo.toml
ares-rpc/src/ares/: mod.rs  request_check.rs
contracts/erc20-issue/: Cargo.toml  lib.rs
contracts/patramaker/: Cargo.toml  lib.rs
contracts/patramaker/dai/: Cargo.toml  lib.rs
docker/: Build.Both.Dockerfile  Build.Gladios.Dockerfile  Build.Odyssey.Dockerfile  builder-cache.Dockerfile  builder.Dockerfile  builder.fast-pioneer.Dockerfile
node/: Cargo.toml
node/res/: ares.yml  chain-data-ares-aura-raw-revert.json  chain-data-ares-aura-raw.json  chain-data-ares-aura.json  dev.yml  gen-file.json  gladios.json  gladios.yml  local.yml  odyssey.json  odyssey.yml  test.yml  testnet_raw.json  wasm.aura.v102.hex  wasm.aura.v103.hex  wasm.aura.v104.hex  wasm.aura.v105.hex  wasm.aura.v107.hex  wasm.aura.v110.hex  wasm.aura.v111.gladios.hex  wasm.aura.v111.poineer.hex  wasm.aura.v113.poineer.hex  wasm.aura.v114.poineer.hex  wasm.aura.v119.gladios.hex  wasm.aura.v120.gladios.hex  wasm.hex  wasm.v102.hex
node/src/: benchmarking.rs  chain_spec.imonline.rs  chain_spec.rs  cli.rs  command.rs  gladios_service.rs  grandpa_hard_forks.rs  lib.rs  main.rs  pioneer_service.rs  rpc.rs  service.rs  service_babe.rs  services.rs  services.rs.bak2  services_babe.rs
node/src/chain_spec/: ares_genesis.rs  gladios-balance.json  gladios.rs  odyssey.rs  pioneer.rs  testnet_genesis.no.imonline.bak  testnet_genesis.rs
node/src/commands/: build_spec_cmd.rs  mod.rs
node/src/service/: gladios.rs  odyssey.rs  pioneer.rs
node/src/service/rpc_extends/: mod.rs
node/src/service/rpc_extends/ares/: impls.rs  mod.rs  test.rs
node/src/service_babe/: gladios.rs  pioneer.rs
node/src/services/: gladios.rs  pioneer.rs
ocw-aura/: Cargo.toml
ocw-aura/src/: import_queue.rs  lib.rs
pallets/account-filter/: Cargo.toml
pallets/account-filter/src/: lib.rs
pallets/kitties/: Cargo.toml
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/pallet-ares/: Cargo.toml
pallets/pallet-ares/src/: lib.rs  mock.old.bak.rs  mock.rs  tests.rs
pallets/pallet-ocw/: Cargo.toml
pallets/pallet-ocw/src/: lib.old.bak.rs  lib.rs  mock.old.bak.rs  mock.rs  tests.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
pallets/template/src/: authority_raw.txt  lib.rs  tests.rs
polkadot-launch/: config.json  launch.sh
runtime/: Cargo.toml
runtime/common/: Cargo.toml
runtime/common/src/: lib.rs
runtime/gladios/: Cargo.toml
runtime/gladios/src/: constants.rs  lib.rs  part_ares_reminder.rs  part_challenge.rs  part_estimates.rs  part_manual_bridge.rs  part_member_extend.rs  part_ocw.rs  part_ocw_finance.rs
runtime/gladios/src/governance/: mod.rs  part_bounties.rs  part_council.rs  part_democracy.rs  part_elections.rs  part_gilt.rs  part_im_online.rs  part_indentity.rs  part_multisig.rs  part_preimage.rs  part_scheduler.rs  part_technical.rs  part_treasury.rs  part_vesting.rs
runtime/gladios/src/network/: mod.rs  part_aura.rs  part_authorship.rs  part_babe.rs  part_elections.rs  part_nomination_pools.rs  part_session.rs  part_staking.rs  part_staking_extend.rs
runtime/odyssey/: Cargo.toml
runtime/odyssey/src/: constants.rs  lib.rs  part_challenge.rs  part_estimates.rs  part_manual_bridge.rs  part_ocw.rs  part_ocw_finance.rs
runtime/odyssey/src/governance/: mod.rs  part_bounties.rs  part_claims.rs  part_democracy.rs  part_elections.rs  part_im_online.rs  part_multisig.rs  part_offences.rs  part_preimage.rs  part_proxy.rs  part_scheduler.rs  part_treasury.rs  part_utility.rs  part_vesting.rs
runtime/odyssey/src/network/: mod.rs  part_aura.rs  part_babe.rs  part_elections.rs  part_session.rs  part_staking.rs  part_staking_extend.rs
runtime/pioneer/: Cargo.toml
runtime/pioneer/src/: constants.rs  lib.rs  part_challenge.rs  part_estimates.rs  part_manual_bridge.rs  part_ocw.rs  part_ocw_finance.rs
runtime/pioneer/src/governance/: mod.rs  part_bounties.rs  part_child_bounties.rs  part_claims.rs  part_council.rs  part_democracy.rs  part_elections.rs  part_im_online.rs  part_indentity.rs  part_offences.rs  part_preimage.rs  part_proxy.rs  part_scheduler.rs  part_technical.rs  part_treasury.rs  part_vesting.rs
runtime/pioneer/src/network/: mod.rs  part_authority_discovery.rs  part_authorship.rs  part_babe.rs  part_conviction_voting.rs  part_elections.rs  part_ranked_collective.rs  part_referenda.rs  part_session.rs  part_staking.rs  part_staking_extend.rs
runtime/src/: chain_extension.rs  constants.rs  lib.rs  part_challenge.rs  part_collective.rs  part_estimates.rs  part_member_extend.rs  part_ocw.rs  part_ocw_finance.rs  part_staking_extend.rs
runtime/src/governance/: mod.rs  part_bounties.rs  part_council.rs  part_democracy.rs  part_multisig.rs  part_proxy.rs  part_scheduler.rs  part_technical.rs  part_treasury.rs
runtime/src/network/: mod.rs  part_aura.rs  part_elections.rs  part_session.rs  part_staking.rs
scripts/: cm.txt  docker_run.sh  insertKeys_alice.sh  insertKeys_bobe.sh  keys.md  node_alice.sh
seed-reader/: Cargo.toml
seed-reader/src/: lib.rs  test_authority_raw.txt
