[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'seed-reader',
    'runtime/gladios',
    'runtime/pioneer',
]

[patch."https://github.com/zzm-Zhong/substrate"]


pallet-session = { git = 'https://github.com/aresprotocols/ocw-suit.git', branch = 'polkadot-v0.9.15' }
pallet-session-benchmarking ={ git = 'https://github.com/aresprotocols/ocw-suit.git', branch = 'polkadot-v0.9.15' }

#pallet-session = {path = "../ocw-suit2/pallets/session" }
#pallet-session-benchmarking ={path = "../ocw-suit2/pallets/session/benchmarking" }

