[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'seed-reader',
    'runtime/gladios',
    'runtime/pioneer',
    'runtime/common',
]

# https://github.com/paritytech/substrate.git.git
#[patch."https://github.com/paritytech/substrate.git"]

#pallet-session = { git = 'https://github.com/aresprotocols/ocw-suit.git', branch = 'polkadot-v0.9.17' }
#pallet-session-benchmarking ={ git = 'https://github.com/aresprotocols/ocw-suit.git', branch = 'polkadot-v0.9.17' }

#pallet-session = {path = "../ares-ocw-suit/pallets/session" }
#pallet-session-benchmarking ={path = "../ares-ocw-suit/pallets/session/benchmarking" }

