[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'runtime/gladios',
    'runtime/pioneer',
    'runtime/common',
]

[profile.production]
inherits = "release"
#lto = true
# More code generation units allows more of a crate to be processed in parallel possibly reducing compile time, but may produce slower code.
# https://github.com/paritytech/polkadot/issues/4311
#codegen-units = 1

#[patch."https://github.com/aresprotocols/ocw-suit"]
#ares-oracle-provider-support = { path = "../ocw-suit/pallets/ares-oracle-provider-support" }
#ares-oracle = { path = "../ocw-suit/pallets/ares-oracle" }
#oracle-finance = { path = "../ocw-suit/pallets/oracle-finance" }
#member-extend = { path = "../ocw-suit/pallets/member-extend" }
#pallet-ares-challenge = { path = "../ocw-suit/pallets/challenge" }
#pallet-price-estimates = { path = "../ocw-suit/pallets/price-estimates" }
#staking-extend = { path = "../ocw-suit/pallets/staking-extend" }
#ares-rpc = { path = "../ocw-suit/rpc/ares-rpc" }

#[patch."https://github.com/aresprotocols/ocw-suit"]
#ares-oracle-provider-support = { path = "../ares-ocw-suit/pallets/ares-oracle-provider-support" }
#ares-oracle = { path = "../ares-ocw-suit/pallets/ares-oracle" }
#oracle-finance = { path = "../ares-ocw-suit/pallets/oracle-finance" }
#seed-reader = { path = "../ares-ocw-suit/tools/seed-reader" }
#pallet-ares-challenge = { path = "../ares-ocw-suit/pallets/challenge" }
#pallet-price-estimates = { path = "../ares-ocw-suit/pallets/price-estimates" }
#staking-extend = { path = "../ares-ocw-suit/pallets/staking-extend" }
#ares-rpc = { path = "../ares-ocw-suit/rpc/ares-rpc" }