[package]
name = "ocw-sc-consensus-aura"
version = "0.10.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Aura consensus algorithm for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-consensus-aura = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-block-builder = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-block-builder = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-client-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-consensus = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-consensus-slots = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
derive_more = "0.99.2"
futures = "0.3.9"
sp-inherents = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
log = "0.4.8"
sp-core = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-blockchain = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-consensus-slots = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-api = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-runtime = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-keystore = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-telemetry = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1', version = "0.9.0" }
async-trait = "0.1.50"
# We enable it only for web-wasm check
# See https://docs.rs/getrandom/0.2.1/getrandom/#webassembly-support
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
sp-timestamp = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-keyring = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sp-tracing = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-keystore = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-network = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
sc-network-test = { version = "0.8.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1'}
substrate-test-runtime-client = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', tag = 'monthly-2021-09+1' }
tempfile = "3.1.0"
parking_lot = "0.11.1"
